// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-11098.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Type = {
  // comment
  readonly [T in number];
};

type Type = {
  // comment1
  // comment2
  readonly [T in number];
};

type Type = {
  // comment
  +readonly [T in number];
};

type Type = {
  // comment
  -readonly [T in number];
};

type Type = {
  // comment
  +    readonly [T in number];
};

type Type = {
  // comment
  +readonly     [T in number];
};

type Type = {
  // comment
  readonly       [T in number];
};

type Type = {
  // comment
  [T in number];
};

=====================================output=====================================
type Type = {
  // comment
  readonly [T in number];
};

type Type = {
  // comment1
  // comment2
  readonly [T in number];
};

type Type = {
  // comment
  +readonly [T in number];
};

type Type = {
  // comment
  -readonly [T in number];
};

type Type = {
  // comment
  +readonly [T in number];
};

type Type = {
  // comment
  +readonly [T in number];
};

type Type = {
  // comment
  readonly [T in number];
};

type Type = {
  // comment
  [T in number];
};

================================================================================
`;

exports[`mapped-type.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Keys = 'option1' | 'option2';
type A = { [K in Keys] };
type B = { [K in Keys]+? };

=====================================output=====================================
type Keys = "option1" | "option2";
type A = { [K in Keys] };
type B = { [K in Keys]+? };

================================================================================
`;
